--- a/app/assets/javascripts/jskit_rails_min.js.erb
+++ b/app/assets/javascripts/jskit_rails_min.js.erb
@@ -1,3 +1,3 @@
 //= require jskit.min
 
-var App = JSKit.createApplication();
+var <%= JskitRails.configuration.app_namespace %> = JSKit.createApplication();
