--- a/app/assets/javascripts/jskit_rails_standalone_min.js.erb
+++ b/app/assets/javascripts/jskit_rails_standalone_min.js.erb
@@ -1,3 +1,3 @@
-//= require jskit_standalone
+//= require jskit_standalone_min
 
 var <%= JskitRails.configuration.app_namespace %> = JSKit.createApplication();
