--- a/app/assets/javascripts/jskit_rails_legacy.js.erb
+++ b/app/assets/javascripts/jskit_rails_legacy.js.erb
@@ -1,3 +1,3 @@
-//= require jskit_standalone.min
+//= require jskit_legacy
 
 var <%= JskitRails.configuration.app_namespace %> = JSKit.createApplication();
