--- a/app/assets/javascripts/rails_jskit.js.erb
+++ b/app/assets/javascripts/rails_jskit.js.erb
@@ -1,3 +1,3 @@
 //= require jskit
 
-var <%= RailsJskit.configuration.app_namespace %> = JSKit.createApplication();
+var <%= RailsJskit.configuration.app_namespace %> = JSkit.createApplication();
